[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mikraw"
version = "0.1.0"
description = "Generic batch RAW-to-JPEG converter with a fixed vibrant look, developed with Panasonic Lumix files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mikael Osterdahl" }]
keywords = ["raw", "jpeg", "rw2", "lumix", "libraw", "photography", "batch"]
dependencies = [
    "rawpy>=0.21",
    "numpy>=1.24",
    "Pillow>=10.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
exif = ["pyexiv2>=2.8"]
dev = ["pytest>=7.0", "pyexiv2>=2.8"]

[project.scripts]
mikraw = "mikraw.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
